Build out modules

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,12 @@
 	<title></title>
 </head>
 <body>
-	Hello world
+	<header>
+		<nav id="home">Home</nav>
+		<nav id="menu">Menu</nav>
+		<nav id="about">About</nav>
+	</header>
+	<div id="content">
+	</div>
 </body>
 </html>
