--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title></title>
-	<link rel="stylesheet" href="style.css">
-	<script src="index.js" defer></script>
+	<title>Odin's Restaurant</title>
 </head>
 <body>
 	<header>
